@@ -1,5 +1,8 @@
 [b]Version 0.6.8[/b]:
 
+(2009-07-04)
+ * The settings of TV channels are saved on ~/.config/smplayer/smplayer_tv.ini.
+
 (2009-07-02)
  * Added a new section in the preferences dialog: TV and radio.
 
